# twin-me

./: .env  .env.check-again  .env.example  .env.production  .env.production.fixed  .env.production.verify  .env.test  .env.vercel  .env.vercel.check  .env.vercel.final  .env.vercel.new  .env.vercel.production  .env.vercel.test  .env.verify  .gitignore  .gitleaks.toml  .vercel-deploy-trigger  .vercelignore  ANIMATION-CHEATSHEET.md  ANTHROPIC_DESIGN.md  ANTHROPIC_DESIGN_SYSTEM.md  ANTHROPIC_TYPOGRAPHY_REFERENCE.md  API_DOCUMENTATION.md  API_INTEGRATION_GUIDE.md  API_OPPORTUNITIES.md  APPLY_MIGRATION.md  ARCHITECTURE_EXPLANATION.md  ARCHITECTURE_QUICK_SUMMARY.md  ARCTIC_OAUTH_GUIDE.md  AUDIT-PLAN.md  AZURE_OPENAI_SETUP.md  BEHAVIORAL_PATTERNS_IMPLEMENTATION.md  BEHAVIORAL_PATTERNS_QUICKSTART.md  BEHAVIORAL_PATTERNS_README.md  BULL_QUEUE_IMPLEMENTATION.md  CLAUDE.md  CLAUDE_SKILLS_IMPLEMENTATION.md  COLOR_CHECKLIST.md  COMPLETE_SESSION_SUMMARY.md  COMPREHENSIVE_ANALYSIS_REPORT.md  (+245 more)
.agents/: SWARM.md  run-swarm.md  status.json
.claude/: settings.local.json
.githooks/: pre-commit
.github/: CODEOWNERS
.serena/: project.yml
api/: .gitignore  dev-start.js  index.js  instagram-sync.js  migrate-simple.js  migrate.js  server-patch.txt  server.js  simple-server.js  test-anon-key.js  test-arctic-extraction.js  test-connections.js  test-evidence-pipeline.js  test-pattern-learning.js  test-soul-analysis.js  test-spotify-extraction.js  test-supabase.js  webhook-plaid.js  webhook-pluggy.js  webhook-truelayer.js
bridge/: Dockerfile  README.md  fly.toml  go.mod  main.go
browser-extension/: BRAVE_TESTING_STEPS.md  COMPLETE_REINSTALL.md  DEPLOYMENT.md  FIXES_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL_AND_TEST.md  JWT_INTEGRATION.md  LOADING_GUIDE.md  LOADING_INSTRUCTIONS.md  README.md  SERVICE_WORKER_FIX.md  SOUL_OBSERVER_TESTING_SUMMARY.md  TESTING_REPORT.md  background.js  build-for-store.ps1  config.js  content.js  create-content.cjs  create-icons-simple.cjs  create-icons.js  create-png-icons.cjs  debug-soul-observer.js  inject-token-and-test.js  launch-chrome-with-extension.bat  manifest.json  manual-reload-extension.js  popup-new.html  popup-new.js  reload-and-test.js  soul-observer.js  test-dashboard-button.js  test-service-worker.html  test-soul-observer-e2e.js
context/: design-principles.md  style-guide.md
coverage/: index.html
database/: seed_data.sql
design-prototypes/: 01-aura.html  02-bento.html  03-constellation.html  04-editorial.html  glass-01-landing.html  glass-02-login.html  glass-03-dashboard.html  glass-04-soul-signature.html  glass-05-portfolio.html  light-01-landing.html  v2-01-card-stack.html  v2-02-split-hero.html  v2-03-cinematic.html  v2-04-dashboard-grid.html  v3-01-landing-dark.html  v3-01-landing-light.html  v4-concept-aurora.html  v4-concept-liquid.html  v4-concept-nebula.html  v4-concept-orbital.html  warm-01-landing.html
design-system/: tokens.css
desktop/: .gitignore  README.md  package.json
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  twinme-auth-bridge.json  twinme-onboarding.json  twinme-panel.json  twinme-remote-open-external.json  twinme-settings.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: active_window.rs  audio_capture.rs  audio_permission.rs  auth_refresh.rs  clip_indexer.rs  clips.rs  config.rs  lib.rs  main.rs  meeting_recorder.rs  meetings.rs  model.rs  sync.rs  transcribe.rs  update.rs
docs/: OAUTH_SETUP.md  ONBOARDING_DESIGN.md  PRIVACY_SYSTEM_README.md  SCIENCE_BACKED_SPECIALIST_AGENTS.md  WEARABLE_OAUTH_SETUP.md
ml/: gnn_model.py  requirements.txt
mobile/: .easignore  .env.example  .gitignore  App.tsx  README.md  app.config.js  app.json  eas.json  index.ts  package-lock.json  package.json
playwright-report-settings-audit/: index.html
public/: figma-capture.html  manifest.json  mcp-test.html  openapi-mcp.yaml  service-worker.js  sw.js
research/: ALTERNATIVE_DATA_EXTRACTION_STRATEGY.md  COFOUNDER_ANALYSIS.md  COFOUNDER_COMPLETE_ONBOARDING_ANALYSIS.md  COFOUNDER_COMPLETE_ONBOARDING_FLOW.md  COFOUNDER_DEEP_ANALYSIS.md  COFOUNDER_DESIGN_ANALYSIS_2025.md  COFOUNDER_GMAIL_OAUTH_FLOW.md  COFOUNDER_ONBOARDING_ANALYSIS.md  COFOUNDER_TECHNICAL_BACKEND_ANALYSIS.md  COFOUNDER_UI_DESIGN_SYSTEM.md  COFOUNDER_UX_IMPLEMENTATION.md  COMPLETE_ONBOARDING_FLOW.md  COMPLETE_UX_TRANSFORMATION_SUMMARY.md  IMPLEMENTATION_PLAN_NEXT_STEPS.md  MINIMAL_ONBOARDING_IMPLEMENTATION.md  ONBOARDING_AI_IMPLEMENTATION_COMPLETE.md  PIPEDREAM_IMPLEMENTATION_COMPLETE.md  PIPEDREAM_SETUP_GUIDE.md  competitor-analysis.html  competitor-analysis.md
scripts/: add-database-methods.cjs  add-hero-login-buttons.cjs  add-liquid-glass-card.cjs  apply-clean-design.cjs  apply-cofounder-design.cjs  apply-instant-twin-hero.cjs  apply-migration.js  apply-migration.mjs  apply-migrations.js  apply-schema-fix.js  apply-tier-migration.js  audit-all.mjs  autoresearch.js  backfill-merchant-normalized.js  backfill-null-embeddings.mjs  check-statement-nag-status.mjs  check_dpo_status.py  cleanup-stuck-jobs.js  diag-calendar.mjs  esrgan-backgrounds.sh  find-meta-webhook-url.js  fix-digital-twins-schema.js  fix-step6-auth.cjs  fix-welcome-flow-complete.cjs  fix-welcome-flow-step6.cjs  generate-imagen-backgrounds.cjs  generate-renan-summaries.js  import-whatsapp-local.mjs  ingest-renan-transcript.js  inspect-chat-traces.cjs  inspect-prod-backgrounds.cjs  integrate-name-research.cjs  integrate-pipedream-calendar.cjs  integrate-pipedream-gmail.cjs  launch_dpo.py  oauth-auto-setup.js  oauth-reconnect-v2.mjs  oauth-reconnect.mjs  oauth-setup-guide.md  personality_ica.py  (+27 more)
src/: App.tsx  index.css  index.css.backup  main.tsx
supabase/: config.toml
tasks/: audit-2026-02-28.md  audit-2026-03-02.md  audit-2026-03-10.md  audit-2026-03-11.md  audit-2026-03-13.md  audit-2026-03-14.md  audit-2026-03-15.md  audit-2026-03-16.md  audit-2026-03-23.md  audit-2026-03-25.md  audit-2026-03-31.md  audit-2026-04-03.md  audit-2026-04-12.md  audit-2026-04-13.md  audit-2026-04-19.md  audit-deep.cjs  audit-e2e.cjs  (+9 more)
(+3079 files in other folders)
