[package]
name = "twinme-desktop"
version = "0.1.0"
description = "TwinMe Desktop - your AI twin, always one keystroke away"
authors = ["TwinMe <founders@twinme.me>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "twinme_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# tokio is a transitive dep of tauri, but we use the `tokio::` crate name directly
# in clip_indexer.rs + sync.rs for tokio::time::sleep. Add it explicitly so the
# name resolves in our crate scope. "time" + "rt" cover our sleep + spawn needs.
tokio = { version = "1", features = ["time", "rt", "macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.1"
core-foundation = "0.10"
core-graphics = "0.24"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
