[package]
name = "twinme-desktop"
version = "0.1.0"
description = "TwinMe Desktop - your AI twin, always one keystroke away"
authors = ["TwinMe <founders@twinme.me>"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "twinme_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `macos-private-api` is required because tauri.conf.json sets
# app.macOSPrivateApi = true (for the transparent Hummingbird panel). The Tauri
# CLI auto-injects this during `tauri build`, but raw `cargo test` (the Linux CI
# step) validates Cargo features against the config and fails without it.
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
# Phase 2 (Google sign-in): system-browser OAuth returns via a twinme:// deep
# link. single-instance (with the deep-link feature) MUST initialize before the
# deep-link plugin so an inbound twinme:// URL reaches the already-running app on
# Windows/Linux instead of spawning a second process.
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
# Phase 7 (auto-update): self-update from signed GitHub releases (latest.json),
# so desktop binary fixes reach users without a manual re-download. Desktop-only;
# the check runs from Rust on startup (see src/update.rs), so it needs no JS
# capability and the remote twinme.me webview can never trigger an update.
tauri-plugin-updater = "2"
# Launch-at-login: the desktop capture is only "always-on" if the app actually
# runs after a reboot. Without this it stopped on every shutdown and never
# resumed (clips halted at the 2026-06-11 shutdown). Enabled from Rust in
# setup() via ManagerExt::autolaunch() — no JS capability needed.
tauri-plugin-autostart = "2"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# tokio is a transitive dep of tauri, but we use the `tokio::` crate name directly
# in clip_indexer.rs + sync.rs for tokio::time::sleep. Add it explicitly so the
# name resolves in our crate scope. "time" + "rt" cover our sleep + spawn needs;
# "sync" adds the Mutex that auth_refresh.rs uses to serialize token refreshes.
tokio = { version = "1", features = ["time", "rt", "macros", "sync"] }
# Phase 3: parse the JWT the web app writes to <config_dir>/twinme/auth.toml.
toml = "0.8"
# Phase 4: OS keyring (macOS Keychain / Windows Credential Manager / Linux
# Secret Service) for the auth token. On Linux we use `linux-native` (keyutils,
# pure-Rust) instead of `sync-secret-service` so headless CI compiles without a
# dbus/Secret-Service daemon running. The keyring is never CALLED in tests
# (CI only compiles + runs the TOML-fallback unit tests), so the choice of
# Linux backend only affects compilation, not test behaviour.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
# Onboarding: open the default input device briefly to trigger the OS microphone
# permission prompt (macOS TCC). We never record or transcribe — the stream is
# opened, played, and dropped after a short sleep. cpal is the same crate the
# README earmarks for Phase 5B meeting capture, so this also lays that groundwork.
cpal = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.1"
core-foundation = "0.10"
core-graphics = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
# Phase 4: active-window detection via Win32. GetForegroundWindow +
# GetWindowTextW live under Win32_UI_WindowsAndMessaging; OpenProcess +
# QueryFullProcessImageNameW (for the owning exe path) live under
# Win32_System_Threading; HWND/HANDLE/CloseHandle under Win32_Foundation.
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# Phase 4: active-window detection on X11. We query the root window's
# _NET_ACTIVE_WINDOW (EWMH) for the focused window, then _NET_WM_NAME (title)
# and WM_CLASS (app). x11rb is a pure-Rust X11 client — no system C deps.
# Wayland has no portable active-window API, so those sessions yield None.
x11rb = "0.13"

[dev-dependencies]
mockito = "1.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "test-util"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
